<resources>
    <string name="app_name">AsilApp</string>
    <string name="entry_login_title">ENTRA IN ASILAPP</string>
    <string name="entry_email">Email</string>
    <string name="entry_password">Password</string>
    <string name="entry_password_confirm">Conferma Password</string>
    <string name="entry_btn_login">ACCEDI</string>
    <string name="entry_btn_to_register">REGISTRATI AD ASILAPP</string>
    <string name="entry_empty_mail">Devi inserire la mail</string>
    <string name="entry_empty_password">Devi inserire la password</string>
    <string name="entry_login_success">Autenticazione riuscita</string>
    <string name="entry_login_failed">Autenticazione fallita</string>
    <string name="entry_register_title">REGISTRATI IN ASILAPP</string>
    <string name="entry_name">Nome</string>
    <string name="entry_surname">Cognome</string>
    <string name="entry_btn_register">REGISTRATI</string>
    <string name="entry_register_success">Account registrato con successo</string>
    <string name="entry_register_failed">Impossibile registrare l\u0027account</string>
    <string name="entry_empty_name">Devi inserire il tuo nome</string>
    <string name="entry_empty_surname">Devi inserire il tuo cognome</string>
    <string name="entry_different_password">Le due password devono essere uguali</string>
    <string name="entry_short_password">La password deve essere di almeno 6 caratteri</string>
    <string name="entry_maschio">MASCHIO</string>
    <string name="entry_femmina">FEMMINA</string>
    <string name="entry_choice_gender">Devi selezionare il tuo sesso</string>
    <string name="entry_login_rapido_button">ACCESSO DIRETTO</string>
    <string name="entry_login_rapido_domanda">Con quale tipo di account si vuole eseguire l\u0027accesso rapido?</string>
    <string-array name="entry_login_rapido_scelte">
        <item>Amministratore</item>
        <item>Personale sanitario</item>
        <item>Utente Maschio</item>
        <item>Utente Femmina</item>
    </string-array>
    <string name="option_menu_logout">Logout</string>
    <string name="option_menu_logout_confirm">Logout effettuato con successo</string>
    <string name="option_menu_delete_account">Elimina Account</string>
    <string name="option_menu_delete_account_title">Conferma eliminazione</string>
    <string name="option_menu_delete_account_msg">Sei sicuro di voler eliminare il tuo account? Se procedi l\u0027azione sarà irreversibile</string>
    <string name="option_menu_yes">Sì</string>
    <string name="option_menu_no">No</string>
    <string name="option_menu_delete_success">Account eliminato con successo</string>
    <string name="option_menu_delete_failed">Impossibile eliminare l\u0027account</string>
    <string name="option_menu_admin_page">Pagina Amministratore</string>
    <string name="option_menu_update">AGGIORNA</string>
    <string name="option_menu_update_completed">Profilo aggiornato</string>
    <string name="option_menu_aggiorna_pagina">Aggiorna App</string>
    <string name="pager_tab1">Profilo</string>
    <string name="pager_tab2">Malattie</string>
    <string name="pager_tab3">Esplora</string>
    <string name="pager_tab4">Spese</string>
    <string name="spese_content_fab_add">AGGIUNGI SPESA</string>
    <string name="spese_content_fab_calculate">CALCOLA SPESA</string>
    <string name="spese_aggiungi_spesa_titolo">Aggiungi una nuova spesa</string>
    <string-array name="spese_lista_tipologie">
        <item>Farmaci</item>
        <item>Alimentare</item>
        <item>Abbigliamento</item>
        <item>Oggetti per casa</item>
        <item>Libri</item>
        <item>Tecnologia</item>
        <item>Svago</item>
    </string-array>
    <string name="spese_data_selezionata">Data: %s</string>
    <string name="spese_data_btn_content">Seleziona data</string>
    <string name="spese_costo_euro">Costo (€)</string>
    <string name="spese_aggiunta_successo">Spesa aggiunta con successo</string>
    <string name="spese_aggiunta_fallimento">Impossibile aggiungere spesa</string>
    <string name="spese_calcola_spese_titolo">Calcola le tue spese</string>
    <string name="spese_calcola_spese_from">Da: </string>
    <string name="spese_calcola_spese_to">A: </string>
    <string-array name="spese_lista_tipologie_piu_tutto">
        <item>Tutto</item>
        <item>Farmaci</item>
        <item>Alimentare</item>
        <item>Abbigliamento</item>
        <item>Oggetti per casa</item>
        <item>Libri</item>
        <item>Tecnologia</item>
        <item>Svago</item>
    </string-array>
    <string name="spese_alert_inserire_costo">Devi inserire un costo</string>
    <string name="spese_seleziona_ogni_data">Seleziona tutte le date</string>
    <string name="spese_risultato_calcolo_spesa">Spesa totale: %.2f €</string>
    <string name="spese_lista_vuota_msg">NON HAI SPESE REGISTRATE</string>
    <string name="spese_lista_non_vuota_msg">ELENCO SPESE REGISTRATE</string>
    <string name="spese_delete_btn_content">Elimina spesa</string>
    <string name="spese_delete_spesa">Cancella spesa</string>
    <string name="spese_elemento_lista_data">Data: %s</string>
    <string name="spese_elemento_lista_tipo">Tipo: %s</string>
    <string name="spese_elemento_lista_costo">Costo: %.2f €</string>
    <string name="spese_delete_spesa_titolo">Conferma eliminazione</string>
    <string name="spese_delete_spesa_content">Sei sicuro di voler eliminare la spesa?</string>
    <string name="anagrafica_ruolo">\u0020 Ruolo: \u0020</string>
    <string name="anagrafica_mail">\u0020 E-mail: \u0020</string>
    <string name="anagrafica_name">\u0020 Nome: \u0020</string>
    <string name="anagrafica_surname">\u0020 Cognome: \u0020</string>
    <string name="anagrafica_sesso">\u0020 Sesso: \u0020</string>
    <string name="anagrafica_maschio">Maschio</string>
    <string name="anagrafica_femmina">Femmina</string>
    <string name="anagrafica_regione">\u0020 Regione: \u0020</string>
    <string name="anagrafica_regione_non_specificata">Non specificata</string>
    <string name="anagrafica_ruolo_utente">Utente Asilapp</string>
    <string name="anagrafica_ruolo_ps">Personale sanitario</string>
    <string name="anagrafica_ruolo_admin">Admin</string>
    <string name="anagrafica_ruolo_ps_admin">Admin + Personale sanitario</string>
    <string name="anagrafica_misurazioni_titolo">\u0020 Misurazioni fatte dal personale sanitario</string>
    <string name="anagrafica_temperatura_no_misure">Nessuna misura sulla temperatura.</string>
    <string name="anagrafica_temperatura_misure">Temperatura [°C]:</string>
    <string name="anagrafica_pressione_no_misure">Nessuna misura sulla pressione.</string>
    <string name="anagrafica_pressione_misure">Pressione [hPa]:</string>
    <string name="anagrafica_battiti_no_misure">Nessuna misura sui battiti cardiaci.</string>
    <string name="anagrafica_battiti_misure">Battito Cardiaco [bpm]:</string>
    <string name="ps_titolo">Personale Sanitario</string>
    <string name="ps_option_search">Cerca personale sanitario</string>
    <string name="ps_button_register_as_ps">Registrati come personale sanitario</string>
    <string name="ps_are_you_doctor_title">Fai parte del personale sanitario?</string>
    <string name="ps_are_you_doctor_msg">Se procedi ti verranno richiesti altri dati al solo fine di
        effettuare ulteriori controlli da parte degli amministratori.</string>
    <string name="ps_button_modify_request_of_register_as_ps">Modifica richiesta registrazione</string>
    <string name="ps_button_modify_setting_as_ps">Modifica impostazioni come personale sanitario</string>
    <string name="ps_button_annulla_config">Annulla</string>
    <string name="ps_register_codice_fiscale">Codice Fiscale</string>
    <string name="ps_register_professione">Professione</string>
    <string name="ps_register_istituzione">Istituzione Sanitaria</string>
    <string name="ps_register_region_description">Regione\nistituzione:</string>
    <string-array name="regioni_italiane">
        <item>Abruzzo</item>
        <item>Basilicata</item>
        <item>Calabria</item>
        <item>Campania</item>
        <item>Emilia Romagna</item>
        <item>Friuli Venezia Giulia</item>
        <item>Lazio</item>
        <item>Liguria</item>
        <item>Lombardia</item>
        <item>Marche</item>
        <item>Molise</item>
        <item>Piemonte</item>
        <item>Puglia</item>
        <item>Sardegna</item>
        <item>Sicilia</item>
        <item>Toscana</item>
        <item>Trentino Alto Adige</item>
        <item>Umbria</item>
        <item>Val D\u0027Aosta</item>
        <item>Veneto</item>
    </string-array>
    <string name="ps_choice_visibility">Voglio essere visibile dagli altri utenti nella lista del personale</string>
    <string name="ps_attiva_visibility_title">Vuoi diventare visibile agli altri utenti?</string>
    <string name="ps_attiva_visibility_msg">Se selezioni Sì, condividerai con loro i seguenti dati:
        Nome, Cognome, Email, Professione, Istituzione e Regione.</string>
    <string name="ps_invia_richiesta">Invia richiesta</string>
    <string name="ps_invia_richiesta_error_codice_fiscale">Codice fiscale non corretto</string>
    <string name="ps_invia_richiesta_error_professione">Inserire una professione</string>
    <string name="ps_invia_richiesta_error_istituzione">Inserire una Istituzione sanitaria</string>
    <string name="ps_invia_richiesta_completata_title">Richiesta inviata</string>
    <string name="ps_invia_richiesta_completata_msg">La tua richiesta è stata inoltrata. Quando un
        amministratore accetterà la tua richiesta, il tuo profilo verrà aggiornato</string>
    <string name="ps_modifica_richiesta_save">Salva modifiche</string>
    <string name="ps_richiesta_modificata_confirm">Le modifiche sono state salvate</string>
    <string name="ps_elimina_richiesta">Elimina richiesta</string>
    <string name="ps_elimina_richiesta_msg">Vuoi eliminare la tua richiesta per registrarti come personale sanitario?</string>
    <string name="ps_richiesta_eliminata_confirm">La richiesta è stata eliminata</string>
    <string name="ps_modifica_status_titolo">Modifica status da personale sanitario</string>
    <string name="ps_ricerca_personale_ogni_regione">Cerca in tutte le regioni</string>
    <string name="ps_ricerca_personale_send_btn">Invia i tuoi dati</string>
    <string name="ps_invio_dati_titolo_scegli_app">Con quale app inviare i dati?</string>
    <string name="ps_invio_dati_messaggio">Le mie malattie:\n</string>
    <string name="admin_page_title">Pagina Amministratore</string>
    <string name="admin_list_request_title">Elenco delle richieste per registrarsi come personale sanitario</string>
    <string name="admin_list_request_empty">Non ci sono richieste per registrarsi come personale sanitario</string>
    <string name="admin_single_request_codiceFiscale">CF: %s</string>
    <string name="admin_single_request_email">Email: %s</string>
    <string name="admin_single_request_nomeCompleto">Nome: %s</string>
    <string name="admin_single_request_professione">Professione: %s</string>
    <string name="admin_single_request_istituzione">Istituzione: %s</string>
    <string name="admin_single_request_regione">Regione: %s</string>
    <string name="admin_accetta_richiesta">Conferma richiesta</string>
    <string name="admin_rifiuta_richiesta">Rifiuta richiesta</string>
    <string name="permission_title_rationale_coarse_location">Permesso per la tua posizione</string>
    <string name="permission_text_rationale_coarse_location">
        Per poterti fornire informazioni più precise sulla tua zona ci serve conoscere la tua posizione.</string>
    <string name="permission_ok">OK</string>
    <string name="info_voto_asilapp_title">Valuta AsilApp</string>
    <string name="info_voto_result">%d/5</string>
    <string name="info_voto_medio"> Voto medio degli utenti: %d/5</string>
    <string name="info_voto_regione_title">Valuta la regione %s</string>
</resources>