<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnagraficaFragment">

    <LinearLayout
        android:id="@+id/container_anagrafica_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/panel_elevation"
        android:background="@color/color_panel"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anagrafica_mail"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:id="@+id/anagrafica_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_anagrafica_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/panel_elevation"
        android:background="@color/color_panel"
        android:orientation="horizontal"
        android:layout_below="@+id/container_anagrafica_mail"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anagrafica_name"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:id="@+id/anagrafica_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_anagrafica_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/panel_elevation"
        android:background="@color/color_panel"
        android:orientation="horizontal"
        android:layout_below="@+id/container_anagrafica_name"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anagrafica_surname"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:id="@+id/anagrafica_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_anagrafica_sesso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/panel_elevation"
        android:background="@color/color_panel"
        android:orientation="horizontal"
        android:layout_below="@+id/container_anagrafica_surname"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anagrafica_sesso"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:id="@+id/anagrafica_sesso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_anagrafica_regione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/panel_elevation"
        android:background="@color/color_panel"
        android:orientation="horizontal"
        android:layout_below="@+id/container_anagrafica_surname"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anagrafica_regione"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text_size"/>

        <TextView
            android:id="@+id/anagrafica_regione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"/>

    </LinearLayout>


</RelativeLayout>