<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sezioneInformativa.InfoVotationFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/container_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_panel"
        android:layout_gravity="center"
        android:elevation="6dp">

        <TextView
            android:id="@+id/title_voto_asilapp"
            android:text="@string/info_voto_asilapp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <RatingBar
            android:id="@+id/rating_bar_asilapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:progressTint="@color/yellow"
            android:layout_below="@+id/title_voto_asilapp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/voto_asilapp_personale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_voto_result"
            android:textSize="@dimen/normal_text_size"
            android:layout_toEndOf="@id/rating_bar_asilapp"
            android:layout_below="@+id/title_voto_asilapp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/voto_asilapp_medio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_voto_medio"
            android:textSize="@dimen/normal_text_size"
            android:layout_below="@+id/rating_bar_asilapp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_panel"
        android:layout_gravity="center"
        android:elevation="6dp"
        android:layout_marginTop="20dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/title_voto_regione"
            android:text="@string/info_voto_regione_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <RatingBar
            android:id="@+id/rating_bar_regione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:progressTint="@color/yellow"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/title_voto_regione"/>

        <TextView
            android:id="@+id/voto_regione_personale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_voto_result"
            android:textSize="@dimen/normal_text_size"
            android:layout_toEndOf="@id/rating_bar_regione"
            android:layout_below="@+id/title_voto_regione"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/voto_regione_medio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_voto_medio"
            android:textSize="@dimen/normal_text_size"
            android:layout_below="@+id/rating_bar_regione"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</LinearLayout>